--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.example.mymsspapp"
+        applicationId "io.github.mokomoka.mssprandomapp"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
